crates/stano-di-macros/tests/ui/service_with_non_arc_field.rs
use stano_di_macros::service;

#[service]
struct Widget {
    count: i32,
}

fn main() {}
